--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Tanish Soni",
   "license": "ISC",
   "dependencies": {
+    "@octokit/rest": "^21.0.2",
     "node-fetch": "^3.3.2",
     "octokit": "^4.0.2"
   }
