--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^21.0.2",
+    "formidable": "^3.5.1",
     "node-fetch": "^3.3.2"
   }
 }
