--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "MOQ",
   "main": "script.js",
-  "type": "cjs",
+  "type": "commonjs",
   "scripts": {
     "test": "jest"
   },
